--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -5,9 +5,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawerlayout"
     android:layout_height="wrap_content"
-    android:layout_width="match_parent">
-
-
+    android:layout_width="match_parent"
+    android:forceDarkAllowed="false"
+    >
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/my_toolbar"
