--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources
+    xmlns:tools="http://schemas.android.com/tools"
+    >
 
     <style name="SpinnerPopup" parent="Theme.MaterialComponents.DayNight">
         <item name="android:paddingStart">0dp</item>
@@ -17,7 +19,7 @@
     <style name="textEdit" parent="Theme.MaterialComponents.DayNight">
         <item name="android:textSize">24sp</item>
         <item name="android:padding">10dp</item>
-
     </style>
+
 
 </resources>
