--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.IFPSTAFF" parent="Theme.MaterialComponents.DayNight">
+    <style name="Theme.IFPSTAFF" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/yellow_ifp</item>
         <item name="android:textColorPrimary">@color/black</item>
@@ -12,9 +12,5 @@
         <item name="colorOnSecondary">@color/yellow_ifp</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-
-        <!-- Customize your theme here. -->
-        <!--<item name="actionBarTheme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>-->
     </style>
-
 </resources>
