--- a/app/src/main/res/layout/calendar_main_items.xml
+++ b/app/src/main/res/layout/calendar_main_items.xml
@@ -27,6 +27,7 @@
             />
 
         <ImageView
+            android:visibility="invisible"
             android:id="@+id/btnUpdate"
             android:layout_width="20dp"
             android:layout_height="20dp"
