--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,22 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.IFPSTAFF" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <!-- Primary brand color. -->
+    <style name="Theme.IFPSTAFF" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <item name="colorPrimary">@color/yellow_ifp</item>
+        <!-- Action Bar Style [Color,...] -->
+        <item name="actionBarTheme">@style/Theme.IFPSTAFF</item>
+        <!-- ToolbarTextColor -->
+        <item name="android:textColorSecondary">@color/black</item>
         <item name="android:textColorPrimary">@color/black</item>
         <item name="colorPrimaryVariant">@color/yellow_ifp</item>
         <item name="colorOnPrimary">@color/black</item>
-        <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/black</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/yellow_ifp</item>
-        <!-- Status bar color. -->
+        <!-- lowest bar color -->
+        <item name="android:navigationBarColor">@color/yellow_ifp</item>
+        <!-- Status bar color -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
     </style>
+
 </resources>
+
