fix bugs: show list based on day clikced - not allowed to insert empty task

--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -43,6 +43,14 @@
             android:textAlignment="center"
             android:layout_marginTop="10dp"
             android:text="برای روزهای خاکستری برنامه ای نداریم." />
+        <TextView
+            android:id="@+id/tvCurrentDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            android:layout_marginTop="10dp"
+            />
 
         <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
