--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -10,7 +10,7 @@
         <item name="android:backgroundTint">@color/yellow</item>
         <item name="android:background">@color/yellow</item>
         <item name="android:textSize">50sp</item>
-        <item name="android:textAlignment">gravity</item>
+        <item name="android:textAlignment">center</item>
         <item name="android:gravity">center</item>
         <item name="android:layout_centerHorizontal">true</item>
         <item name="android:layout_centerVertical">true</item>
